entrega3/parser.output
Gramática

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: bis_algoritmo bis_id bis_puntoComa cabecera_alg bloque_alg bis_falgoritmo bis_puntoComa

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal bis_comentario

    3 bloque_alg: bloque bis_comentario
    4           | bloque

    5 decl_globales: declaracion_tipo decl_globales
    6              | declaracion_const decl_globales
    7              | %empty

    8 decl_a_f: accion_d decl_a_f
    9         | funcion_d decl_a_f
   10         | %empty

   11 bloque: declaraciones instrucciones

   12 declaraciones: declaracion_tipo declaraciones
   13              | declaracion_const declaraciones
   14              | declaracion_var declaraciones
   15              | %empty

   16 declaracion_tipo: bis_tipo lista_d_tipo bis_ftipo bis_puntoComa

   17 declaracion_const: bis_const lista_d_cte bis_fconst bis_puntoComa

   18 declaracion_var: bis_var lista_d_var bis_fvar bis_puntoComa

   19 lista_d_tipo: bis_id bis_igual d_tipo bis_puntoComa
   20             | %empty

   21 d_tipo: bis_tupla lista_campos bis_ftupla
   22       | bis_tabla bis_corcheteAbrir expresion_t bis_subrango expresion_t bis_corcheteCerrar bis_de d_tipo
   23       | bis_id
   24       | expresion_t bis_subrango expresion_t
   25       | bis_ref d_tipo
   26       | bis_tipo_base

   27 expresion_t: expresion
   28            | bis_literal_caracter

   29 lista_campos: bis_id bis_dosPuntos d_tipo bis_puntoComa lista_campos
   30             | %empty

   31 lista_d_cte: bis_id bis_igual bis_literal bis_puntoComa lista_d_cte
   32            | %empty

   33 lista_id: bis_id bis_coma lista_id
   34         | bis_id bis_dosPuntos bis_tipo_base

   35 lista_d_var: lista_id bis_puntoComa lista_d_var
   36            | lista_id bis_puntoComa d_tipo bis_puntoComa lista_d_var
   37            | %empty

   38 decl_ent_sal: decl_ent
   39             | decl_ent decl_sal
   40             | decl_sal

   41 decl_ent: bis_ent lista_d_var

   42 decl_sal: bis_sal lista_d_var

   43 expresion: expresion bis_suma expresion
   44          | expresion bis_resta expresion
   45          | expresion bis_multiplicacion expresion
   46          | expresion bis_div_real expresion
   47          | expresion bis_mod expresion
   48          | expresion bis_div expresion
   49          | bis_parentesisAbrir expresion bis_parentesisCerrar
   50          | operando
   51          | bis_literal_real
   52          | bis_literal_entero
   53          | bis_resta expresion
   54          | bis_suma expresion
   55          | expresion bis_y expresion
   56          | expresion bis_o expresion
   57          | bis_no expresion
   58          | bis_verdadero
   59          | bis_falso
   60          | expresion bis_oprel expresion

   61 operando: bis_id
   62         | operando bis_punto operando
   63         | operando bis_corcheteAbrir expresion bis_corcheteCerrar
   64         | operando bis_ref

   65 instrucciones: instruccion bis_puntoComa instrucciones
   66              | instruccion

   67 instruccion: bis_continuar
   68            | asignacion
   69            | alternativa
   70            | iteracion

   71 asignacion: operando bis_asignacion expresion

   72 alternativa: bis_si expresion bis_alternativa instrucciones lista_opciones bis_fsi

   73 lista_opciones: bis_sino expresion bis_alternativa instrucciones lista_opciones
   74               | %empty

   75 it_cota_fija: bis_para bis_id bis_asignacion expresion bis_hasta expresion bis_hacer instrucciones bis_fpara

   76 it_cota_exp: bis_mientras expresion bis_hacer instrucciones bis_fmientras

   77 iteracion: it_cota_fija
   78          | it_cota_exp

   79 accion_d: bis_accion a_cabecera bloque bis_faccion

   80 funcion_d: bis_funcion f_cabecera bloque bis_dev expresion bis_ffuncion

   81 a_cabecera: bis_id bis_parentesisAbrir d_par_form bis_parentesisCerrar bis_puntoComa

   82 f_cabecera: bis_id bis_parentesisAbrir lista_d_var bis_parentesisCerrar bis_dev d_tipo bis_puntoComa

   83 d_par_form: d_p_form bis_puntoComa d_par_form
   84           | %empty

   85 d_p_form: bis_ent lista_id bis_dosPuntos d_tipo
   86         | bis_sal lista_id bis_dosPuntos d_tipo
   87         | bis_entradaSalida lista_id bis_dosPuntos d_tipo


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    bis_coma (258) 33
    bis_puntoComa (259) 1 16 17 18 19 29 31 35 36 65 81 82 83
    bis_dosPuntos (260) 29 34 85 86 87
    bis_alternativa (261) 72 73
    bis_asignacion (262) 71 75
    bis_subrango (263) 22 24
    bis_literal (264) 31
    bis_tipo_base <entradaEntero> (265) 26 34
    bis_dev (266) 80 82
    bis_verdadero (267) 58
    bis_falso (268) 59
    bis_suma (269) 43 54
    bis_resta (270) 44 53
    bis_multiplicacion (271) 45
    bis_div (272) 48
    bis_mod (273) 47
    bis_div_real (274) 46
    bis_o (275) 56
    bis_y (276) 55
    bis_oprel (277) 60
    bis_igual (278) 19 31
    FALSA (279)
    bis_no (280) 57
    bis_id <entradaChar> (281) 1 19 23 29 31 33 34 61 75 81 82
    bis_literal_entero (282) 52
    bis_literal_real (283) 51
    bis_literal_caracter (284) 28
    bis_comentario (285) 2 3
    bis_algoritmo (286) 1
    bis_falgoritmo (287) 1
    bis_funcion (288) 80
    bis_ffuncion (289) 80
    bis_accion (290) 79
    bis_faccion (291) 79
    bis_tipo (292) 16
    bis_ftipo (293) 16
    bis_const (294) 17
    bis_fconst (295) 17
    bis_var (296) 18
    bis_fvar (297) 18
    bis_tupla (298) 21
    bis_ftupla (299) 21
    bis_si (300) 72
    bis_fsi (301) 72
    bis_para (302) 75
    bis_fpara (303) 75
    bis_mientras (304) 76
    bis_fmientras (305) 76
    bis_hasta (306) 75
    bis_hacer (307) 75 76
    bis_ent (308) 41 85
    bis_sal (309) 42 86
    bis_sino (310) 73
    bis_entradaSalida (311) 87
    bis_continuar (312) 67
    bis_de (313) 22
    bis_tabla (314) 22
    bis_parentesisAbrir (315) 49 81 82
    bis_parentesisCerrar (316) 49 81 82
    bis_corcheteAbrir (317) 22 63
    bis_corcheteCerrar (318) 22 63
    bis_punto (319) 62
    bis_ref (320) 25 64


No terminales con las reglas donde aparecen

    $accept (66)
        on left: 0
    desc_algoritmo (67)
        on left: 1
        on right: 0
    cabecera_alg (68)
        on left: 2
        on right: 1
    bloque_alg (69)
        on left: 3 4
        on right: 1
    decl_globales (70)
        on left: 5 6 7
        on right: 2 5 6
    decl_a_f (71)
        on left: 8 9 10
        on right: 2 8 9
    bloque (72)
        on left: 11
        on right: 3 4 79 80
    declaraciones (73)
        on left: 12 13 14 15
        on right: 11 12 13 14
    declaracion_tipo (74)
        on left: 16
        on right: 5 12
    declaracion_const (75)
        on left: 17
        on right: 6 13
    declaracion_var (76)
        on left: 18
        on right: 14
    lista_d_tipo (77)
        on left: 19 20
        on right: 16
    d_tipo <entradaEntero> (78)
        on left: 21 22 23 24 25 26
        on right: 19 22 25 29 36 82 85 86 87
    expresion_t (79)
        on left: 27 28
        on right: 22 24
    lista_campos (80)
        on left: 29 30
        on right: 21 29
    lista_d_cte (81)
        on left: 31 32
        on right: 17 31
    lista_id <entradaEntero> (82)
        on left: 33 34
        on right: 33 35 36 85 86 87
    lista_d_var (83)
        on left: 35 36 37
        on right: 18 35 36 41 42 82
    decl_ent_sal (84)
        on left: 38 39 40
        on right: 2
    decl_ent (85)
        on left: 41
        on right: 38 39
    decl_sal (86)
        on left: 42
        on right: 39 40
    expresion (87)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 27 43 44 45 46 47 48 49 53 54 55 56 57 60 63 71 72 73 75 76 80
    operando <entradaEntero> (88)
        on left: 61 62 63 64
        on right: 50 62 63 64 71
    instrucciones (89)
        on left: 65 66
        on right: 11 65 72 73 75 76
    instruccion (90)
        on left: 67 68 69 70
        on right: 65 66
    asignacion (91)
        on left: 71
        on right: 68
    alternativa (92)
        on left: 72
        on right: 69
    lista_opciones (93)
        on left: 73 74
        on right: 72 73
    it_cota_fija (94)
        on left: 75
        on right: 77
    it_cota_exp (95)
        on left: 76
        on right: 78
    iteracion (96)
        on left: 77 78
        on right: 70
    accion_d (97)
        on left: 79
        on right: 8
    funcion_d (98)
        on left: 80
        on right: 9
    a_cabecera (99)
        on left: 81
        on right: 79
    f_cabecera (100)
        on left: 82
        on right: 80
    d_par_form (101)
        on left: 83 84
        on right: 81 83
    d_p_form (102)
        on left: 85 86 87
        on right: 83


Estado 0

    0 $accept: . desc_algoritmo $end

    bis_algoritmo  desplazar e ir al estado 1

    desc_algoritmo  ir al estado 2


Estado 1

    1 desc_algoritmo: bis_algoritmo . bis_id bis_puntoComa cabecera_alg bloque_alg bis_falgoritmo bis_puntoComa

    bis_id  desplazar e ir al estado 3


Estado 2

    0 $accept: desc_algoritmo . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 desc_algoritmo: bis_algoritmo bis_id . bis_puntoComa cabecera_alg bloque_alg bis_falgoritmo bis_puntoComa

    bis_puntoComa  desplazar e ir al estado 5


Estado 4

    0 $accept: desc_algoritmo $end .

    $default  aceptar


Estado 5

    1 desc_algoritmo: bis_algoritmo bis_id bis_puntoComa . cabecera_alg bloque_alg bis_falgoritmo bis_puntoComa

    bis_tipo   desplazar e ir al estado 6
    bis_const  desplazar e ir al estado 7

    $default  reduce usando la regla 7 (decl_globales)

    cabecera_alg       ir al estado 8
    decl_globales      ir al estado 9
    declaracion_tipo   ir al estado 10
    declaracion_const  ir al estado 11


Estado 6

   16 declaracion_tipo: bis_tipo . lista_d_tipo bis_ftipo bis_puntoComa

    bis_id  desplazar e ir al estado 12

    $default  reduce usando la regla 20 (lista_d_tipo)

    lista_d_tipo  ir al estado 13


Estado 7

   17 declaracion_const: bis_const . lista_d_cte bis_fconst bis_puntoComa

    bis_id  desplazar e ir al estado 14

    $default  reduce usando la regla 32 (lista_d_cte)

    lista_d_cte  ir al estado 15


Estado 8

    1 desc_algoritmo: bis_algoritmo bis_id bis_puntoComa cabecera_alg . bloque_alg bis_falgoritmo bis_puntoComa

    bis_tipo   desplazar e ir al estado 6
    bis_const  desplazar e ir al estado 7
    bis_var    desplazar e ir al estado 16

    $default  reduce usando la regla 15 (declaraciones)

    bloque_alg         ir al estado 17
    bloque             ir al estado 18
    declaraciones      ir al estado 19
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 9

    2 cabecera_alg: decl_globales . decl_a_f decl_ent_sal bis_comentario

    bis_funcion  desplazar e ir al estado 23
    bis_accion   desplazar e ir al estado 24

    $default  reduce usando la regla 10 (decl_a_f)

    decl_a_f   ir al estado 25
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 10

    5 decl_globales: declaracion_tipo . decl_globales

    bis_tipo   desplazar e ir al estado 6
    bis_const  desplazar e ir al estado 7

    $default  reduce usando la regla 7 (decl_globales)

    decl_globales      ir al estado 28
    declaracion_tipo   ir al estado 10
    declaracion_const  ir al estado 11


Estado 11

    6 decl_globales: declaracion_const . decl_globales

    bis_tipo   desplazar e ir al estado 6
    bis_const  desplazar e ir al estado 7

    $default  reduce usando la regla 7 (decl_globales)

    decl_globales      ir al estado 29
    declaracion_tipo   ir al estado 10
    declaracion_const  ir al estado 11


Estado 12

   19 lista_d_tipo: bis_id . bis_igual d_tipo bis_puntoComa

    bis_igual  desplazar e ir al estado 30


Estado 13

   16 declaracion_tipo: bis_tipo lista_d_tipo . bis_ftipo bis_puntoComa

    bis_ftipo  desplazar e ir al estado 31


Estado 14

   31 lista_d_cte: bis_id . bis_igual bis_literal bis_puntoComa lista_d_cte

    bis_igual  desplazar e ir al estado 32


Estado 15

   17 declaracion_const: bis_const lista_d_cte . bis_fconst bis_puntoComa

    bis_fconst  desplazar e ir al estado 33


Estado 16

   18 declaracion_var: bis_var . lista_d_var bis_fvar bis_puntoComa

    bis_id  desplazar e ir al estado 34

    $default  reduce usando la regla 37 (lista_d_var)

    lista_id     ir al estado 35
    lista_d_var  ir al estado 36


Estado 17

    1 desc_algoritmo: bis_algoritmo bis_id bis_puntoComa cabecera_alg bloque_alg . bis_falgoritmo bis_puntoComa

    bis_falgoritmo  desplazar e ir al estado 37


Estado 18

    3 bloque_alg: bloque . bis_comentario
    4           | bloque .

    bis_comentario  desplazar e ir al estado 38

    $default  reduce usando la regla 4 (bloque_alg)


Estado 19

   11 bloque: declaraciones . instrucciones

    bis_id         desplazar e ir al estado 39
    bis_si         desplazar e ir al estado 40
    bis_para       desplazar e ir al estado 41
    bis_mientras   desplazar e ir al estado 42
    bis_continuar  desplazar e ir al estado 43

    operando       ir al estado 44
    instrucciones  ir al estado 45
    instruccion    ir al estado 46
    asignacion     ir al estado 47
    alternativa    ir al estado 48
    it_cota_fija   ir al estado 49
    it_cota_exp    ir al estado 50
    iteracion      ir al estado 51


Estado 20

   12 declaraciones: declaracion_tipo . declaraciones

    bis_tipo   desplazar e ir al estado 6
    bis_const  desplazar e ir al estado 7
    bis_var    desplazar e ir al estado 16

    $default  reduce usando la regla 15 (declaraciones)

    declaraciones      ir al estado 52
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 21

   13 declaraciones: declaracion_const . declaraciones

    bis_tipo   desplazar e ir al estado 6
    bis_const  desplazar e ir al estado 7
    bis_var    desplazar e ir al estado 16

    $default  reduce usando la regla 15 (declaraciones)

    declaraciones      ir al estado 53
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 22

   14 declaraciones: declaracion_var . declaraciones

    bis_tipo   desplazar e ir al estado 6
    bis_const  desplazar e ir al estado 7
    bis_var    desplazar e ir al estado 16

    $default  reduce usando la regla 15 (declaraciones)

    declaraciones      ir al estado 54
    declaracion_tipo   ir al estado 20
    declaracion_const  ir al estado 21
    declaracion_var    ir al estado 22


Estado 23

   80 funcion_d: bis_funcion . f_cabecera bloque bis_dev expresion bis_ffuncion

    bis_id  desplazar e ir al estado 55

    f_cabecera  ir al estado 56


Estado 24

   79 accion_d: bis_accion . a_cabecera bloque bis_faccion

    bis_id  desplazar e ir al estado 57

    a_cabecera  ir al estado 58


Estado 25

    2 cabecera_alg: decl_globales decl_a_f . decl_ent_sal bis_comentario

    bis_ent  desplazar e ir al estado 59
    bis_sal  desplazar e ir al estado 60

    decl_ent_sal  ir al estado 61
    decl_ent      ir al estado 62
    decl_sal      ir al estado 63


Estado 26

    8 decl_a_f: accion_d . decl_a_f

    bis_funcion  desplazar e ir al estado 23
    bis_accion   desplazar e ir al estado 24

    $default  reduce usando la regla 10 (decl_a_f)

    decl_a_f   ir al estado 64
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 27

    9 decl_a_f: funcion_d . decl_a_f

    bis_funcion  desplazar e ir al estado 23
    bis_accion   desplazar e ir al estado 24

    $default  reduce usando la regla 10 (decl_a_f)

    decl_a_f   ir al estado 65
    accion_d   ir al estado 26
    funcion_d  ir al estado 27


Estado 28

    5 decl_globales: declaracion_tipo decl_globales .

    $default  reduce usando la regla 5 (decl_globales)


Estado 29

    6 decl_globales: declaracion_const decl_globales .

    $default  reduce usando la regla 6 (decl_globales)


Estado 30

   19 lista_d_tipo: bis_id bis_igual . d_tipo bis_puntoComa

    bis_tipo_base         desplazar e ir al estado 66
    bis_verdadero         desplazar e ir al estado 67
    bis_falso             desplazar e ir al estado 68
    bis_suma              desplazar e ir al estado 69
    bis_resta             desplazar e ir al estado 70
    bis_no                desplazar e ir al estado 71
    bis_id                desplazar e ir al estado 72
    bis_literal_entero    desplazar e ir al estado 73
    bis_literal_real      desplazar e ir al estado 74
    bis_literal_caracter  desplazar e ir al estado 75
    bis_tupla             desplazar e ir al estado 76
    bis_tabla             desplazar e ir al estado 77
    bis_parentesisAbrir   desplazar e ir al estado 78
    bis_ref               desplazar e ir al estado 79

    d_tipo       ir al estado 80
    expresion_t  ir al estado 81
    expresion    ir al estado 82
    operando     ir al estado 83


Estado 31

   16 declaracion_tipo: bis_tipo lista_d_tipo bis_ftipo . bis_puntoComa

    bis_puntoComa  desplazar e ir al estado 84


Estado 32

   31 lista_d_cte: bis_id bis_igual . bis_literal bis_puntoComa lista_d_cte

    bis_literal  desplazar e ir al estado 85


Estado 33

   17 declaracion_const: bis_const lista_d_cte bis_fconst . bis_puntoComa

    bis_puntoComa  desplazar e ir al estado 86


Estado 34

   33 lista_id: bis_id . bis_coma lista_id
   34         | bis_id . bis_dosPuntos bis_tipo_base

    bis_coma       desplazar e ir al estado 87
    bis_dosPuntos  desplazar e ir al estado 88


Estado 35

   35 lista_d_var: lista_id . bis_puntoComa lista_d_var
   36            | lista_id . bis_puntoComa d_tipo bis_puntoComa lista_d_var

    bis_puntoComa  desplazar e ir al estado 89


Estado 36

   18 declaracion_var: bis_var lista_d_var . bis_fvar bis_puntoComa

    bis_fvar  desplazar e ir al estado 90


Estado 37

    1 desc_algoritmo: bis_algoritmo bis_id bis_puntoComa cabecera_alg bloque_alg bis_falgoritmo . bis_puntoComa

    bis_puntoComa  desplazar e ir al estado 91


Estado 38

    3 bloque_alg: bloque bis_comentario .

    $default  reduce usando la regla 3 (bloque_alg)


Estado 39

   61 operando: bis_id .

    $default  reduce usando la regla 61 (operando)


Estado 40

   72 alternativa: bis_si . expresion bis_alternativa instrucciones lista_opciones bis_fsi

    bis_verdadero        desplazar e ir al estado 67
    bis_falso            desplazar e ir al estado 68
    bis_suma             desplazar e ir al estado 69
    bis_resta            desplazar e ir al estado 70
    bis_no               desplazar e ir al estado 71
    bis_id               desplazar e ir al estado 39
    bis_literal_entero   desplazar e ir al estado 73
    bis_literal_real     desplazar e ir al estado 74
    bis_parentesisAbrir  desplazar e ir al estado 78

    expresion  ir al estado 92
    operando   ir al estado 83


Estado 41

   75 it_cota_fija: bis_para . bis_id bis_asignacion expresion bis_hasta expresion bis_hacer instrucciones bis_fpara

    bis_id  desplazar e ir al estado 93


Estado 42

   76 it_cota_exp: bis_mientras . expresion bis_hacer instrucciones bis_fmientras
